a1/brendan_gordon/TEST_PROGRAMS/invalidtype/prabhjot_sandhu/floatToint.min
var x:int;
var y:float;
var z:int;

read x;
read y;

z = x + y;
print z;

